--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,23 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* Solution */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.links {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  gap: 16px;
+}
+
