Complete exercise 4, use flex properties to create simple layout

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,19 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+/* Solution */
+body {
+  text-align: center;
+}
+.title {
+  margin-bottom: 32px;
+}
+.content {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+.box {
+  max-width: 200px;
+}
